--- a/homepage/login.html
+++ b/homepage/login.html
@@ -12,7 +12,7 @@
 
    <!-- Login Form -->
    <div class="login-form-container" id="loginForm">
-    <img src="logo.png" alt="" id = "logo" >
+    <!-- <img src="logo.png" alt="" id = "logo" > -->
     <div class = "logo1"><span id = "visual">VISUALIST</span></div>
        <div class = "form-card-container">
            <div class = "card-form">
