--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -24,14 +24,14 @@
           <div class="icon cancel-btn">
             <i class="fas fa-times"></i>
           </div>
-          <li><a href="/LandingPage/LandingPage.html" id="homeMenu">Home</a></li>
+          <li><a href="/Visualist/LandingPage/LandingPage.html" id="homeMenu">Home</a></li>
           <ul class="nav-menu">
             <li class="dropdown">
                 <a href="#">Lessons</a>
                 <ul class="dropdown-menu">
-                    <li><a href="/MultimediaElements/multi.html">Multimedia Elements</a></li>
-                    <li><a href="/compositions/compo.html">Photography</a></li>
-                    <li><a href="/videographyfinalfinal/overview.html">Videography</a></li>
+                    <li><a href="/Visualist/MultimediaElements/multi.html">Multimedia Elements</a></li>
+                    <li><a href="/Visualist/compositions/compo.html">Photography</a></li>
+                    <li><a href="/Visualist/videographyfinalfinal/overview.html">Videography</a></li>
                 </ul>
             </li>
           </ul>
