--- a/videographyfinalfinal/overview.html
+++ b/videographyfinalfinal/overview.html
@@ -19,18 +19,18 @@
         <div class="icon cancel-btn">
           <i class="fas fa-times"></i>
         </div>
-        <li><a href="/LandingPage/LandingPage.html" class="home">Home</a></li>
+        <li><a href="/Visualist/LandingPage/LandingPage.html" class="home">Home</a></li>
         <ul class="nav-menu">
           <li class="dropdown">
               <a href="#">Lessons</a>
               <ul class="dropdown-menu">
-                  <li><a href="/MultimediaElements/multi.html">Multimedia Elements</a></li>
-                  <li><a href="/compositions/compo.html">Photography</a></li>
-                  <li><a href="/videographyfinalfinal/overview.html">Videography</a></li>
+                  <li><a href="/Visualist/MultimediaElements/multi.html">Multimedia Elements</a></li>
+                  <li><a href="/Visualist/compositions/compo.html">Photography</a></li>
+                  <li><a href="/Visualist/videographyfinalfinal/overview.html">Videography</a></li>
               </ul>
           </li>
         </ul>
-        <li><a href="/AboutUs/AboutUs.html">About Us</a></li>
+        <li><a href="/Visualist/AboutUs/AboutUs.html">About Us</a></li>
       </ul>
       <div class="icon menu-btn">
         <i class="fas fa-bars"></i>
@@ -66,7 +66,7 @@
               <p>
                 Pre-production planning is the process of organizing and preparing everything needed before filming begins. It involves defining the video’s purpose, creating a script, deciding on locations, casting talent, and organizing the necessary equipment and crew.
               </p>
-              <a href="/videographyfinalfinal/thispre-production/pre.html" class="read-more">
+              <a href="/Visualist/videographyfinalfinal/thispre-production/pre.html" class="read-more">
                 Read More <span>&rarr;</span>
               </a>
             </div>
@@ -83,7 +83,7 @@
               <h1><table>Types of Videography</table></h1>
               <p>
                 The purpose of videography is to capture, preserve, and communicate visual and auditory content effectively, often with the goal of informing, entertaining, or inspiring an audience.    </p>
-              <a href="/videographyfinalfinal/VIDEOGRAPHY WITH QUIZ/video.html" class="real-natural">
+              <a href="/Visualist/videographyfinalfinal/VIDEOGRAPHY WITH QUIZ/video.html" class="real-natural">
                 <span>&larr;</span> Read More 
               </a>
             </div>   
@@ -96,7 +96,7 @@
               <p>
                 The components of videography include the camera, lighting, sound, composition, editing software, and stabilizing tools. The camera is essential for capturing footage, while lighting sets the mood and enhances visual clarity.
               </p>
-              <a href="/videographyfinalfinal/VCOMPO WITH QUIZ/vcompo.html" class="real-space">
+              <a href="/Visualist/videographyfinalfinal/VCOMPO WITH QUIZ/vcompo.html" class="real-space">
                 Read More <span>&rarr;</span>
               </a>
             </div>
@@ -114,7 +114,7 @@
               <h1>Equipments</h1>
               <p>
                 Photography and videography equipment refers to the tools and devices that enable the creation, enhancement, and refinement of visual and audio content.   </p>
-                <a href="/videographyfinalfinal/EQUIPMENT WITH QUIZ/equipments.html" class="real-space">
+                <a href="/Visualist/videographyfinalfinal/EQUIPMENT WITH QUIZ/equipments.html" class="real-space">
                   Read More <span>&rarr;</span>
                 </a>
             </div>   
