--- a/compositions/compo.html
+++ b/compositions/compo.html
@@ -153,7 +153,7 @@
               <h1>LINE</h1>
               <p>
                 Line composition is a key element in photography that helps guide the viewer’s eye through an image. Whether straight, curved, or diagonal, lines create depth, structure, and emotion, making photos more engaging and visually dynamic.</p>
-              <a href="/compositions/LINE WITH QUIZ/lines.html" class="real-natural">
+              <a href="/Visualist/compositions/LINE WITH QUIZ/lines.html" class="real-natural">
                 <span>&larr;</span> Read More 
               </a>
             </div>   
