--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -195,7 +195,7 @@
           <h4>Adviser</h4>
           <ul class="footer__links">
             <span>MS. Farah Diva Alvarado</span>
-            <span>Animation Multimedia Instuctor</span>
+            <span>Web Technology Instructor</span>
           </ul>
         </div>
       </div>
