--- a/MultimediaElements/multi.html
+++ b/MultimediaElements/multi.html
@@ -198,8 +198,8 @@
         <div class="footer__col">
           <h4>Adviser</h4>
           <ul class="footer__links">
-            <span style="font-weight: 400;">MS. Farah Diva Alvarado</span>
-            <span style="font-weight: 400;">Animation Multimedia Instuctor</span>
+            <span>MS. Farah Diva Alvarado</span>
+            <span>Web Technology Instructor</span>
           </ul>
         </div>
       </div>
