--- a/compositions/compo.html
+++ b/compositions/compo.html
@@ -192,8 +192,8 @@
         <div class="footer__col">
           <h4>Adviser</h4>
           <ul class="footer__links">
-            <span>MS. FARAH ALVARADO</span>
-            <span>Animation Multimedia Instuctor</span>
+            <span>MS. Farah Diva Alvarado</span>
+            <span>Web Technology Instructor</span>
           </ul>
         </div>
       </div>
