--- a/homepage/login.html
+++ b/homepage/login.html
@@ -56,6 +56,6 @@
        </div>    
    </div>        
 </div>
-<script src = "login.js"></script>
+<script src = "login1.js"></script>
 </body>
 </html>
