--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -357,7 +357,7 @@
         <div class="footer__col">
           <h4>Adviser</h4>
           <ul class="footer__links">
-            <span>MS. FARAH ALVARADO</span>
+            <span>MS. Farah Diva Alvarado</span>
             <span>Animation Multimedia Instuctor</span>
           </ul>
         </div>
