--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -79,7 +79,7 @@
       <li><a href="#" class="home">Home</a></li>
       <li><a href="#">Features</a></li>
       <li><a href="#">About Us</a></li>
-      <li><a href="/Visualist/homepage/login.html" class="btnn login-btn">Log In</a></li>
+      <li><a href="/homepage/login.html" class="btnn login-btn">Log In</a></li>
     </ul>
     <div class="icon menu-btn">
       <i class="fas fa-bars"></i>
