--- a/LandingPage/LandingPage.html
+++ b/LandingPage/LandingPage.html
@@ -32,13 +32,13 @@
         <li class="dropdown">
             <a href="#">Lessons</a>
             <ul class="dropdown-menu">
-                <li><a href="/Visualist/MultimediaElements/multi.html">Multimedia Elements</a></li>
-                <li><a href="/Visualist/compositions/compo.html">Photography</a></li>
-                <li><a href="/Visualist/videographyfinalfinal/overview.html">Videography</a></li>
+                <li><a href="/MultimediaElements/multi.html">Multimedia Elements</a></li>
+                <li><a href="/compositions/compo.html">Photography</a></li>
+                <li><a href="/videographyfinalfinal/overview.html">Videography</a></li>
             </ul>
         </li>
       </ul>
-      <li><a href="/Visualist/AboutUs/AboutUs.html">About Us</a></li>
+      <li><a href="/AboutUs/AboutUs.html">About Us</a></li>
     <div class="icon menu-btn">
       <i class="fas fa-bars"></i>
     </div>
