--- a/MultimediaElements/multi.html
+++ b/MultimediaElements/multi.html
@@ -18,18 +18,18 @@
         <div class="icon cancel-btn">
           <i class="fas fa-times"></i>
         </div>
-        <li><a href="/LandingPage/LandingPage.html" id="homeMenu">Home</a></li>
+        <li><a href="/Visualist/LandingPage/LandingPage.html" id="homeMenu">Home</a></li>
         <ul class="nav-menu">
           <li class="dropdown">
               <a href="#">Lessons</a>
               <ul class="dropdown-menu">
-                  <li><a href="/MultimediaElements/multi.html">Multimedia Elements</a></li>
-                  <li><a href="/compositions/compo.html">Photography</a></li>
-                  <li><a href="/videographyfinalfinal/overview.html">Videography</a></li>
+                  <li><a href="/Visualist/MultimediaElements/multi.html">Multimedia Elements</a></li>
+                  <li><a href="/Visualist/compositions/compo.html">Photography</a></li>
+                  <li><a href="/Visualist/videographyfinalfinal/overview.html">Videography</a></li>
               </ul>
           </li>
         </ul>
-        <li><a href="/AboutUs/AboutUs.html" id="aboutMenu">About Us</a></li>
+        <li><a href="/Visualist/AboutUs/AboutUs.html" id="aboutMenu">About Us</a></li>
       </ul>
       <div class="icon menu-btn">
         <i class="fas fa-bars"></i>
@@ -64,7 +64,7 @@
               <p>
                 A cutting-edge multimedia element that creates immersive, interactive 3D environments, allowing users to experience and interact with digital worlds.
               </p>
-              <a href="/MultimediaElements/VIRTUAL WITH QUIZ/virtual.html" class="read-more">
+              <a href="/Visualist/MultimediaElements/VIRTUAL WITH QUIZ/virtual.html" class="read-more">
                 Read More <span>&rarr;</span> 
               </a>
             </div>
@@ -81,7 +81,7 @@
               <h1 id="themes">THEMES</h1>
               <p>
                 Central concepts or ideas that guide the design and narrative of multimedia projects, providing consistency and a unified vision across all elements.</p>
-              <a href="/MultimediaElements/THEME WITH QUIZ/themes.html" class="real-natural">
+              <a href="/Visualist/MultimediaElements/THEME WITH QUIZ/themes.html" class="real-natural">
                 <span>&larr;</span> Read More 
               </a>
             </div>   
@@ -94,7 +94,7 @@
               <p>
                 Discover the art of space composition in photography. Learn how to effectively utilize negative space, leading lines, and other techniques to create visually captivating images that draw the viewer's eye.
               </p>
-              <a href="/MultimediaElements/TEXT WITH QUIZ/texts.html" class="real-space">
+              <a href="/Visualist/MultimediaElements/TEXT WITH QUIZ/texts.html" class="real-space">
                 Read More <span>&rarr;</span>
               </a>
             </div>
@@ -126,7 +126,7 @@
               <p>
                 Master the art of framing your subjects to create powerful and visually compelling photographs. Learn how to use the surrounding elements to draw attention to your focal point and enhance the overall composition of your image.
               </p>
-              <a href="/MultimediaElements/animation/animation.html" class="real-space">
+              <a href="/Visualist/MultimediaElements/animation/animation.html" class="real-space">
                 Read More <span>&rarr;</span>
               </a>
             </div>
@@ -144,7 +144,7 @@
               <h1 id="audio">AUDIO</h1>
               <p>
                 Line composition is a key element in photography that helps guide the viewer’s eye through an image. Whether straight, curved, or diagonal, lines create depth, structure, and emotion, making photos more engaging and visually dynamic.</p>
-              <a href="/MultimediaElements/SOUND WITH QUIZ/sound.html" class="real-natural">
+              <a href="/Visualist/MultimediaElements/SOUND WITH QUIZ/sound.html" class="real-natural">
                 <span>&larr;</span> Read More 
               </a>
             </div>   
