--- a/compositions/compo.html
+++ b/compositions/compo.html
@@ -12,24 +12,24 @@
   <nav class="navbar">
     <div class="content">
       <div class="logo">
-        <a href="/LandingPage/LandingPage.html">Visualist</a>
+        <a href="/Visualist/LandingPage/LandingPage.html">Visualist</a>
       </div>
       <ul class="menu-list">
         <div class="icon cancel-btn">
           <i class="fas fa-times"></i>
         </div>
-        <li><a href="/LandingPage/LandingPage.html" id="homeMenu">Home</a></li>
+        <li><a href="/Visualist/LandingPage/LandingPage.html" id="homeMenu">Home</a></li>
         <ul class="nav-menu">
           <li class="dropdown">
               <a href="#">Lessons</a>
               <ul class="dropdown-menu">
-                  <li><a href="/MultimediaElements/multi.html">Multimedia Elements</a></li>
-                  <li><a href="/compositions/compo.html">Photography</a></li>
-                  <li><a href="/videographyfinalfinal/overview.html">Videography</a></li>
+                  <li><a href="/Visualist/MultimediaElements/multi.html">Multimedia Elements</a></li>
+                  <li><a href="/Visualist/compositions/compo.html">Photography</a></li>
+                  <li><a href="/Visualist/videographyfinalfinal/overview.html">Videography</a></li>
               </ul>
           </li>
         </ul>
-        <li><a href="/AboutUs/AboutUs.html" id="aboutMenu">About Us</a></li>
+        <li><a href="/Visualist/AboutUs/AboutUs.html" id="aboutMenu">About Us</a></li>
       </ul>
       <div class="icon menu-btn">
         <i class="fas fa-bars"></i>
@@ -73,7 +73,7 @@
               <p>
                 Learn the rule of thirds, a photography technique that can transform your images. Discover how to create balanced and visually appealing compositions with this simple yet powerful method
               </p>
-              <a href="/Rules/Rules/ROT.html" class="read-more">
+              <a href="/Visualist/Rules/Rules/ROT.html" class="read-more">
                 Read More <span>&rarr;</span>
               </a>
             </div>
@@ -90,7 +90,7 @@
               <h1>NATURAL LIGHT</h1>
               <p>
                 Master the art of capturing stunning images using only natural light. Learn how to harness the power of sunlight to create beautiful, ethereal photographs.              </p>
-              <a href="/compositions/NATURAL LIGHT WITH QUIZ/natural.html" class="real-natural">
+              <a href="/Visualist/compositions/NATURAL LIGHT WITH QUIZ/natural.html" class="real-natural">
                 <span>&larr;</span> Read More 
               </a>
             </div>   
@@ -103,7 +103,7 @@
               <p>
                 Discover the art of space composition in photography. Learn how to effectively utilize negative space, leading lines, and other techniques to create visually captivating images that draw the viewer's eye.
               </p>
-              <a href="/compositions/SPACE WITH QUIZ/space.html" class="real-space">
+              <a href="/Visualist/compositions/SPACE WITH QUIZ/space.html" class="real-space">
                 Read More <span>&rarr;</span>
               </a>
             </div>
@@ -121,7 +121,7 @@
               <h1>COLOR</h1>
               <p>
                 Explore the world of color theory and learn how to use color to evoke emotion and create visually stunning photographs. Discover techniques for color harmony, contrast, and balance to elevate your images.   </p>
-              <a href="/compositions/COLOR WITH QUIZ/color.html" class="real-natural">
+              <a href="/Visualist/compositions/COLOR WITH QUIZ/color.html" class="real-natural">
                 <span>&larr;</span> Read More 
               </a>
             </div>   
@@ -135,7 +135,7 @@
               <p>
                 Master the art of framing your subjects to create powerful and visually compelling photographs. Learn how to use the surrounding elements to draw attention to your focal point and enhance the overall composition of your image.
               </p>
-              <a href="/compositions/FRAMECOMPOSITION WITH QUIZ/framecomposition.html" class="read-more">
+              <a href="/Visualist/compositions/FRAMECOMPOSITION WITH QUIZ/framecomposition.html" class="read-more">
                 Read More <span>&rarr;</span>
               </a>
             </div>
@@ -153,7 +153,7 @@
               <h1>LINE</h1>
               <p>
                 Line composition is a key element in photography that helps guide the viewer’s eye through an image. Whether straight, curved, or diagonal, lines create depth, structure, and emotion, making photos more engaging and visually dynamic.</p>
-              <a href="/compositions/LINE WITH QUIZ/lines.html" class="real-natural">
+              <a href="/Visualist/compositions/LINE WITH QUIZ/lines.html" class="real-natural">
                 <span>&larr;</span> Read More 
               </a>
             </div>   
