--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -156,11 +156,11 @@
       <div class="about__content" id="shyna">
         <h4>Shyna Ann De Guzman</h4>
         <p class="section__description">
-          Hi, I’m Shyna! I work on the backend to create the UI side functions. I help make sure the website runs without any problems and is efficient.
+          Hi, I’m Shyna!  a 3rd-year student currently pursuing a Bachelor of Science in Information Technology (BSIT). I am passionate about technology and its potential to drive change. 
         </p>
         <p class="section__description">
-          Together, we’re building something that will
-          <span>push the limits of web technology.</span> 
+          Through my studies, I aim to expand my knowledge and skills,  preparing myself for
+          <span>a future in the ever-evolving IT industry.</span> 
         </p>
       </div>
     </section>
