--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -194,7 +194,7 @@
         <div class="footer__col">
           <h4>Adviser</h4>
           <ul class="footer__links">
-            <span>MS. Farah Diva Alvarado</span>
+            <span>Ms. Farah Diva Alvarado</span>
             <span>Web Technology Instructor</span>
           </ul>
         </div>
