--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -60,7 +60,7 @@
     <div class="intro" id="intro">
       <h1>Hello there, we're <span style="background: linear-gradient(to right, #2cabe3, #38ca79); /* Gradient colors */
         -webkit-background-clip: text;  -webkit-text-fill-color: transparent;">Visualist!</span></h1>
-      <p>We create beautiful designs and solutions to help your business shine.</p>
+      <p>We create fun multimedia designs and build easy-to-use websites to help you learn and explore.</p>
     </div>
     <div class="card-container">
       <div class="card">
@@ -137,7 +137,7 @@
         <h4>Louell Clifford Saguindan</h4>
         <p class="section__description">
           Hi, I’m Louell! I work on the backend to create the server-side functions.
-          I make sure everything works well behind the scenes, so the website is fast and reliable.
+          I ensure everything works well behind the scenes, so the website is fast and reliable.
         </p>
         <p class="section__description">
           Let’s craft something innovative and efficient that 
@@ -156,7 +156,7 @@
       <div class="about__content" id="shyna">
         <h4>Shyna Ann De Guzman</h4>
         <p class="section__description">
-          Hi, I’m Shyna!  a 3rd-year student currently pursuing a Bachelor of Science in Information Technology (BSIT). I am passionate about technology and its potential to drive change. 
+          Hi, I’m Shyna!  A 3rd-year student pursuing a Bachelor of Science in Information Technology (BSIT). I am passionate about technology and its potential to drive change. 
         </p>
         <p class="section__description">
           Through my studies, I aim to expand my knowledge and skills,  preparing myself for
@@ -172,7 +172,7 @@
             <a href="#" class="logo">Visualist</a>
           </div>
           <p>
-            An Educational Website project open for all students.
+            This educational website project is open to all students.
           </p>
         </div>
         <div class="footer__col">
