--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -58,9 +58,9 @@
     </header>
 
     <div class="intro" id="intro">
-      <h1>Hello there, we're <span style="background: linear-gradient(to right, #2cabe3, #38ca79); /* Gradient colors */
+      <h1>Hello there, we’re <span style="background: linear-gradient(to right, #2cabe3, #38ca79); /* Gradient colors */
         -webkit-background-clip: text;  -webkit-text-fill-color: transparent;">Visualist!</span></h1>
-      <p>We create fun multimedia designs and build easy-to-use websites to help you learn and explore.</p>
+      <p>We’re a 3rd year students based in Cebu, Philippines. </p>
     </div>
     <div class="card-container">
       <div class="card">
