--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -76,10 +76,9 @@
       <div class="icon cancel-btn">
         <i class="fas fa-times"></i>
       </div>
-      <li><a href="#" class="home">Home</a></li>
-      <li><a href="#">Features</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="/Visualist/homepage/login.html" class="btnn login-btn">Log In</a></li>
+          <li><a href="#" class="home">Home</a></li>
+      <li><a href="/Visualist/AboutUs/AboutUs.html">About Us</a></li>
+      <li><a class="btnn login-btn" id = "loginButton" onclick="login()">Log In</a></li>
     </ul>
     <div class="icon menu-btn">
       <i class="fas fa-bars"></i>
