--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -103,6 +103,7 @@
           Together, we’re combining our skills to 
           <span> create something innovative</span> and functional.
         </p>
+        🏆 Best Director 2024
       </div>
     </section>
     <section class="section__container about__container" id="about">
