--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -103,7 +103,7 @@
           Together, we’re combining our skills to 
           <span> create something innovative</span> and functional.
         </p>
-        🏆 Best Director 2024
+        🥉 Third place for Short-Film Video - Computer Engineering Category 
       </div>
     </section>
     <section class="section__container about__container" id="about">
@@ -124,6 +124,8 @@
           Let’s create something powerful and seamless that
           <span>redefines what’s possible.</span>
         </p>
+         🏆 Best Director 2024
+         🥇 Champion for the Short-Film Video - Computer Science Category
       </div>
     </section>
     <section class="section__container about__container" id="about">
@@ -144,6 +146,7 @@
           Let’s craft something innovative and efficient that 
           <span>redefines how users interact</span> with the digital world.
         </p>
+      🥉 Third place for Short-Film Video - Computer Engineering Category
       </div>
     </section>
     <section class="section__container about__container" id="about">
@@ -163,6 +166,7 @@
           Through my studies, I aim to expand my knowledge and skills,  preparing myself for
           <span>a future in the ever-evolving IT industry.</span> 
         </p>
+        🥇 Champion for the Short-Film Video - Information Technology Category
       </div>
     </section>
     
