--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -103,7 +103,7 @@
           Together, we’re combining our skills to 
           <span> create something innovative</span> and functional.
         </p>
-        <p>Achievements</p>
+        <span>Achievements:</span><br></br>
         🥉 Third place for Short-Film Video - Computer Engineering Category 
       </div>
     </section>
@@ -125,7 +125,7 @@
           Let’s create something powerful and seamless that
           <span>redefines what’s possible.</span>
         </p>
-        <p>Achievements</p>
+        <span>Achievements:</span><br></br>
          🏆 Best Director 2024 <br></br>
          🥇 Champion for the Short-Film Video - Computer Science Category
       </div>
@@ -148,7 +148,7 @@
           Let’s craft something innovative and efficient that 
           <span>redefines how users interact</span> with the digital world.
         </p>
-        <p>Achievements</p>
+        <span>Achievements:</span><br></br>
       🥉 Third place for Short-Film Video - Computer Engineering Category
       </div>
     </section>
@@ -169,7 +169,7 @@
           Through my studies, I aim to expand my knowledge and skills,  preparing myself for
           <span>a future in the ever-evolving IT industry.</span> 
         </p>
-        <p>Achievements</p>
+        <span>Achievements:</span><br></br>
         🥇 Champion for the Short-Film Video - Information Technology Category
       </div>
     </section>
