--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -58,7 +58,7 @@
     </header>
 
     <div class="intro" id="intro">
-      <h1>Hello there, we’re <span style="background: linear-gradient(to right, #2cabe3, #38ca79); /* Gradient colors */
+      <h1>Hello there, we’re <span style="background: linear-gradient(to right, #2cabe3, #38ca79); 
         -webkit-background-clip: text;  -webkit-text-fill-color: transparent;">Visualist!</span></h1>
       <p>We’re a 3rd year students based in Cebu, Philippines. </p>
     </div>
@@ -103,7 +103,9 @@
           Together, we’re combining our skills to 
           <span> create something innovative</span> and functional.
         </p>
-        <span style="color: #000;">Achievements:</span><br></br>
+        <br></br>
+        <span style="background: linear-gradient(to right, #2c55e3, #38ca79); 
+        -webkit-background-clip: text;  -webkit-text-fill-color: transparent;font-weight: 600;">Achievements:</span><br></br>
         🥉 Third place for Short-Film Video - Computer Engineering Category 
       </div>
     </section>
@@ -125,7 +127,9 @@
           Let’s create something powerful and seamless that
           <span>redefines what’s possible.</span>
         </p>
-        <span style="color: #000;">Achievements:</span><br></br>
+        <br></br>
+        <span style="background: linear-gradient(to right, #2c55e3, #38ca79); 
+        -webkit-background-clip: text;  -webkit-text-fill-color: transparent;font-weight: 600;">Achievements:</span><br></br>
          🏆 Best Director 2024 <br></br>
          🥇 Champion for the Short-Film Video - Computer Science Category
       </div>
@@ -148,7 +152,9 @@
           Let’s craft something innovative and efficient that 
           <span>redefines how users interact</span> with the digital world.
         </p>
-        <span style="color: #000;">Achievements:</span><br></br>
+        <br></br>
+        <span style="background: linear-gradient(to right, #2c55e3, #38ca79); 
+        -webkit-background-clip: text;  -webkit-text-fill-color: transparent;font-weight: 600;">Achievements:</span><br></br>
       🥉 Third place for Short-Film Video - Computer Engineering Category
       </div>
     </section>
@@ -169,7 +175,9 @@
           Through my studies, I aim to expand my knowledge and skills,  preparing myself for
           <span>a future in the ever-evolving IT industry.</span> 
         </p>
-        <span style="color: #000;">Achievements:</span><br></br>
+        <br></br>
+        <span style="background: linear-gradient(to right, #2c55e3, #38ca79); 
+        -webkit-background-clip: text;  -webkit-text-fill-color: transparent;font-weight: 600;">Achievements:</span><br></br>
         🥇 Champion for the Short-Film Video - Information Technology Category
       </div>
     </section>
