--- a/AboutUs/AboutUs.html
+++ b/AboutUs/AboutUs.html
@@ -106,7 +106,7 @@
         <br></br>
         <span style="background: linear-gradient(to right, #2c55e3, #38ca79); 
         -webkit-background-clip: text;  -webkit-text-fill-color: transparent;font-weight: 600;">Achievements:</span><br></br>
-        🥉 Third place for Short-Film Video - Computer Engineering Category 
+        🥉 Third place for the Short-Film Video - Computer Engineering Category 
       </div>
     </section>
     <section class="section__container about__container" id="about">
@@ -155,7 +155,7 @@
         <br></br>
         <span style="background: linear-gradient(to right, #2c55e3, #38ca79); 
         -webkit-background-clip: text;  -webkit-text-fill-color: transparent;font-weight: 600;">Achievements:</span><br></br>
-      🥉 Third place for Short-Film Video - Computer Engineering Category
+      🥉 Third place for the Short-Film Video - Computer Engineering Category
       </div>
     </section>
     <section class="section__container about__container" id="about">
